[metadata]
name = stravacookies
version = 1.1
author = solitone
author_email = solitone@mail.com
description = A small package providing methods for retrieving Strava's HTTP cookies needed to download Strava's global heatmap in high resolution.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/solitone/stravacookies
project_urls =
    Bug Tracker = https://github.com/solitone/stravacookies/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mechanize

[options.packages.find]
where = src
